Fix card info not showing on IE/Edge

--- a/scss/components/_jwCard.scss
+++ b/scss/components/_jwCard.scss
@@ -233,7 +233,6 @@
 
     .jw-card-info {
         position: relative;
-        flex-basis: 39px;
     }
 
     .jw-card-description {
